methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:12: error: not found: value setcouleurBrosse
  setcouleurBrosse(C)
  ^